--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,12 @@
 	// 👇 Configure tool-specific properties.
 	"customizations": {
         "vscode": {
-            "extensions":["ms-python.python", "njpwerner.autodocstring"]
+            "extensions":[
+				"ms-python.python",
+				"njpwerner.autodocstring",
+				"Gruntfuggly.todo-tree",
+				"shardulm94.trailing-spaces"
+			]
             }
         }
 
