拡張機能追加

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,8 @@
 				"ms-python.python",
 				"njpwerner.autodocstring",
 				"Gruntfuggly.todo-tree",
-				"shardulm94.trailing-spaces"
+				"shardulm94.trailing-spaces",
+				"ms-toolsai.jupyter"
 			]
             }
         }
